# imap-attachment-daemon

./: .env-example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: create_release.yaml  pr.yaml  publish.yaml
src/: errors.rs  imap_ops.rs  lib.rs  mail_parsing.rs  mail_searching.rs  test_mail_searching.rs
src/models/: config.rs  message_metadata.rs  mod.rs
